# Nerdy_Analysis_Paralysis_Killer

./: .gitignore  README.md  data_input.csv  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
content/configs/: generic_file_structure.json
content/jupyter_notebooks/: Determine_Best_Item.ipynb  build_report.ipynb
content/sample_data_sets/: sample_vacuum_cleaners.csv
content/utils/: create_radar_chart.py
content/wheels/: nerdy_analysis_paralysis_killer_module-0.1.0-py3-none-any.whl
data_manipulation_package/: main.py  pyproject.toml
data_manipulation_package/utils/: read_files.py
files/functions/: compute_consistency_rank.py  compute_ranking.py  compute_weighted_score.py
functions/: compute_weighted_score.py  target_equations.py
repl/: jupyter-lite.json
sample_data_sets/: sample_vacuum_cleaners.csv
src/nerdy_analysis_paralysis_killer_module/: LICENSE  main.py
