[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_manipulation_package"
version = "0.1.0"
authors = [
  { name="Briar Carlile", email="sometempemail@email.com" },
]
description = "A way to find the best item."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://https://github.com/BriarCarlile/Nerdy_Analysis_Paralysis_Killer/actions"
"Bug Tracker" = "none currently... why are you using this?"
